feat: it took years, add member to workspace
