# docs/api/swagger.yaml
@@ -134,6 +134,11 @@ definitions:
       url:
         type: string
     type: object
+  interfaces_server_workspace.AddWorkspaceMemberRequest:
+    properties:
+      user_mail:
+        type: string
+    type: object
   interfaces_server_workspace.CreateWorkspaceRequest:
     properties:
       name:
@@ -759,6 +764,131 @@ paths:
           schema:
             $ref: '#/definitions/errors.HTTPError'
       summary: Delete a workspace
+      tags:
+      - workspaces
+  /workspaces/{workspaceID}/members:
+    get:
+      description: Returns all members of the specified workspace.
+      parameters:
+      - description: Workspace ID
+        in: path
+        name: workspaceID
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              additionalProperties: true
+              type: object
+            type: array
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/errors.HTTPError'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/errors.HTTPError'
+        "403":
+          description: Forbidden
+          schema:
+            $ref: '#/definitions/errors.HTTPError'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/errors.HTTPError'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/errors.HTTPError'
+      summary: List workspace members
+      tags:
+      - workspaces
+    post:
+      consumes:
+      - application/json
+      description: Adds a user to the specified workspace using the user's email address.
+      parameters:
+      - description: Workspace ID
+        in: path
+        name: workspaceID
+        required: true
+        type: string
+      - description: Member details
+        in: body
+        name: request
+        required: true
+        schema:
+          $ref: '#/definitions/interfaces_server_workspace.AddWorkspaceMemberRequest'
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Created
+          schema:
+            additionalProperties: true
+            type: object
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/errors.HTTPError'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/errors.HTTPError'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/errors.HTTPError'
+        "409":
+          description: Conflict
+          schema:
+            $ref: '#/definitions/errors.HTTPError'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/errors.HTTPError'
+      summary: Add a workspace member
+      tags:
+      - workspaces
+  /workspaces/{workspaceID}/members/{memberID}:
+    delete:
+      description: Removes the member identified by memberID from the specified workspace.
+      parameters:
+      - description: Workspace ID
+        in: path
+        name: workspaceID
+        required: true
+        type: string
+      - description: Member ID
+        in: path
+        name: memberID
+        required: true
+        type: string
+      responses:
+        "204":
+          description: No Content
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/errors.HTTPError'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/errors.HTTPError'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/errors.HTTPError'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/errors.HTTPError'
+      summary: Delete a workspace member
       tags:
       - workspaces
 swagger: "2.0"
